# pip-i18next

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  README.md  cli.py  i18n.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
i18n/: __init__.py  base.py  cli.py  config.py  errors.py  parser.py
i18next/: __init__.py  base.py  cli.py  config.py  errors.py  parser.py
tests/: test_i18n.py  utils.py
tests/data/: a.py
tests/data/subpackage/: b.py
tests/integration/: test_cli.py  test_trans.py
tests/unit/: test_i18n.py
