[build-system]
requires = ["flit"]

[tool.flit.metadata]
module = "i18n"
author = "lemon.markets"
author-email = "cto@lemon.markets"
home-page = "https://github.com/lemon-markets/pip-i18n-turbo"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Localization",
]
requires = []
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://github.com/lemon-markets/pip-i18n-turbo"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
doc = []
dev = [
    "autoflake >=1.4.0,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "pre-commit >=2.17.0,<3.0.0",
]
all = []

[tool.isort]
profile = "black"
known_third_party = []

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = ""
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ""
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = []
