[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "i18next"
authors = [{ name = "lemon.markets", email = "cto@lemon.markets" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Localization",
]
dynamic = ["version", "description"]
requires-python = ">=3.8,<4"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

dev = [
    'black',
    'flake8',
    'pre-commit',
]

[project.scripts]
i18next = 'i18next.cli:main'

[project.urls]
Home = "https://github.com/lemon-markets/pip-i18next"

[tool.flit.module]
name = "i18next"

[tool.flit.sdist]
exclude = ["tests/*"]
